1. Code refactor 2. BugFixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="country">Country:</string>
     <string name="runtime">Runtime:</string>
     <string name="revenue">Revenue:</string>
-    <string name="status">Status:</string>
+    <string name="popularity">Popularity:</string>
     <string name="movie_details">Movie details</string>
     <string name="minutes">min.</string>
 </resources>
